syntax = "proto3";
option java_multiple_files = true;
package com.example.rpc.order;

message OrderRequest {
  string item_id = 1;
  int32 price = 2;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
}

service OrderService {
  rpc PlaceOrder(OrderRequest) returns (OrderResponse);
}